# rag-chatbot

./: .env.example  README.md  pyproject.toml
src/: main.py
src/core/: config.py  logger.py
src/ingestion/: excel_load.py  file_loader.py  ingestor.py  splitter.py
src/rag/: llm.py  rag_llm.py
src/ui/: ui.py
src/vector_db/: base_vector_store.py  db_store.py  store_fabric.py
