[project]
name = "llama-chatbot-volkov"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=5.39.0",
    "huggingface-hub>=0.34.3",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.6",
    "langchain-qdrant>=0.2.0",
    "langchain[all]>=0.3.27",
    "mypy>=1.17.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pandas-stubs>=2.3.0.250703",
    "pypdf>=5.9.0",
    "pytest>=8.4.1",
    "qdrant-client>=1.15.0",
    "ruff>=0.12.7",
    "sentence-transformers>=5.0.0",
    "transformers>=4.54.0",
]
